--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -1,11 +1,11 @@
+/* styles/2-footer.css */
 footer {
-	background-color: #00FF00;
-	height: 60px;
-	width: 100%;
-	bottom: 0;
-	position: fixed;
-}
-
-footer p {
-	text-align: center;
+    position: fixed;
+    bottom: 0;
+    background-color: #00FF00;
+    height: 60px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
