--- a/web_static/styles/3-common.css
+++ b/web_static/styles/3-common.css
@@ -1,7 +1,8 @@
-html {
-	margin: 0;
-	padding: 0;
-	color: #484848;
-	font-size: 14px;
-	font-family: "Circular","Helvetica Neue",Helvetica,Arial,sans-serif;
+/* styles/3-common.css */
+body {
+    margin: 0;
+    padding: 0;
+    color: #484848;
+    font-size: 14px;
+    font-family: Circular, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
