--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,13 +1,12 @@
+/* styles/3-footer.css */
 footer {
-	background-color: white;
-	height: 60px;
-	width: 100%;
-	border-top: 1px solid #CCCCCC;
-	bottom: 0;
-	position: fixed;
+    background-color: white;
+    height: 60px;
+    width: 100%;
+    border-top: 1px solid #CCCCCC;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    bottom: 0;
 }
-
-footer p {
-	text-align: center;
-}
-
