--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,25 +1,28 @@
 .filters {
-	background-color: white;
-	height: 70px;
-	width: 100%;
-	border: 1px solid #DDDDDD;
-	border-radius: 4px;
-	position: relative;
+    background-color: white;
+    height: 70px;
+    width: 100%;
+    border: 1px solid #DDDDDD;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    padding-right: 30px; /* Adjust as needed for the search button */
 }
 
-.filters button {
-	font-size: 18px;
-	background-color: #FF5A5F;
-	color: #FFFFFF;
-	height: 48px;
-	width: 20%;
-	border: 0;
-	border-radius: 4px;
-	right: 30px;
-	top: 15%;
-	position: absolute;
+button {
+    font-size: 18px;
+    background-color: #FF5A5F;
+    color: #FFFFFF;
+    height: 48px;
+    width: 20%;
+    border: none;
+    border-radius: 4px;
+    margin-left: auto; /* Pushes the button to the right */
+    margin-right: 30px; /* 30px from the right border */
+    cursor: pointer;
+    transition: opacity 0.3s;
 }
 
-.filters button:hover {
-    opacity: 90%;
+button:hover {
+    opacity: 0.9;
 }
