--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,38 +1,12 @@
-/* styles/5-filters.css */
 .filters {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     background-color: white;
     height: 70px;
     width: 100%;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
-    padding: 0 15px;
-}
-
-.filter {
-    width: 25%;
-    height: 100%;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding-left: 15px;
-}
-
-.locations {
-    border-right: 1px solid #DDDDDD;
-}
-
-h3 {
-    font-weight: 600;
-    margin: 0;
-}
-
-h4 {
-    font-weight: 400;
-    font-size: 14px;
-    margin: 0;
+    align-items: center;
+    padding-right: 30px;
 }
 
 button {
@@ -43,6 +17,8 @@ button {
     width: 20%;
     border: none;
     border-radius: 4px;
+    margin-left: auto;
+    margin-right: 30px;
     cursor: pointer;
     transition: opacity 0.3s;
 }
@@ -50,3 +26,40 @@ button {
 button:hover {
     opacity: 0.9;
 }
+
+.locations, .amenities {
+	height: 100%;
+	width: 25%;
+	display: inline-block;
+}
+
+.locations {
+	border-right: 1px solid #DDDDDD;
+}
+
+.amenities {
+	margin: 10px 0px 0px 30px;
+}
+
+
+.filters h3, .filters h4 {
+	margin: 5px;
+}
+
+.filters h3 {
+	font-weight: 600;
+}
+
+.filters h4 {
+	font-weight: 400;
+	font-size: 14px;
+}
+
+.locations h3{
+	margin: 10px 0px 0px 30px ;
+}
+
+.locations h4 {
+	margin-left: 30px;
+}
+
