--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -78,7 +78,7 @@ button:hover {
 
 .popover {
     display: none;
-    color: white;
+    background-color: #f2f2f2;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
 }
